# stdin_parser

./: Cargo.toml  README.md
src/: lib.rs
stdin_parser_derive/: Cargo.toml
stdin_parser_derive/examples/: enum.rs  nested.rs  simple.rs
stdin_parser_derive/src/: common.rs  enum_derive.rs  lib.rs  struct_derive.rs
