[package]
name = "stdin_parser"
version = "0.1.0"
authors = ["Krzesimir Sarnecki <48632920+krzesimir-sarnecki@users.noreply.github.com>"]
edition = "2018"
description = "Parse stdin by defining a struct"
license = "MIT"
documentation = "https://github.com/krzesimir-sarnecki/stdin_parser"
homepage = "https://github.com/krzesimir-sarnecki/stdin_parser"
repository = "https://github.com/krzesimir-sarnecki/stdin_parser"
keywords = ["cli", "parser", "derive", "parsing"]
