[package]
name = "stdin_parser_derive"
version = "0.1.0"
authors = ["Krzesimir Sarnecki <48632920+krzesimir-sarnecki@users.noreply.github.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.15.33", features = ["extra-traits"]}
quote = "0.6.12"
proc-macro2 = "0.4.27"
stdin_parser = {path = "../"}
